fixed vicenza font path

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Vicenza;
-  src: url(root/fonts/Vicenza.ttf);
+  src: url(fonts/Vicenza.ttf);
 }
 @font-face {
   font-family: PT Sans;
