--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,21 @@
 @import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap");
 
+@font-face {
+  font-family: 'Vortigra';
+  src: url('/fonts/Vortigra.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 
   /* Font definition */
   --font-sans: 'Montserrat', sans-serif;
+  --font-serif: 'Vortigra', serif;
 }
 
 
@@ -14,6 +23,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
-  /* Use Montserrat as the default font */
 }
-
